--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^12.7.4",
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-navigation": "^7.19.1"
