--- a/ios/Podfile
+++ b/ios/Podfile
@@ -22,6 +22,7 @@ target 'setora' do
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable the next line.
   use_flipper!()
+  pod 'Firebase/Analytics'
 
   post_install do |installer|
     react_native_post_install(installer)
