--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-firebase/app": "^12.7.4",
+    "@react-native-firebase/auth": "^12.7.5",
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-navigation": "^7.19.1"
