--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-firebase/app": "^12.7.4",
     "@react-native-firebase/auth": "^12.7.5",
+    "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-navigation": "^7.19.1"
@@ -21,6 +22,7 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
+    "@types/lodash": "^4.14.173",
     "@types/react-native": "^0.64.5",
     "@types/react-test-renderer": "^16.9.2",
     "babel-jest": "^26.6.3",
